--- a/htdocs/css/styles.css
+++ b/htdocs/css/styles.css
@@ -43,14 +43,14 @@ body {
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section {display: block;}
 
 /* soft reset */
-html, body, blockquote, ul, ol, form {margin: 0; padding: 0;}
+html, body, blockquote, ul, ol, form, fieldset {margin: 0; padding: 0;}
 ul, ol {padding-left: 2em}
 .mreset {margin: 0;}
 .preset {padding: 0;}
 
 /* font-sizing for content */
-p, li, td, th, textarea, caption, pre {font-size: 1.6em;}
-li li, li p, td p, th p, li h1, li h2, li h3, li h4, li h5, li h6, button, input, select {font-size: 100%;}
+p, li, td, th, textarea, caption, pre, label, button, input, select {font-size: 1.6em;}
+li li, li p, td p, th p, li h1, li h2, li h3, li h4, li h5, li h6 {font-size: 100%;}
 h1, .h1-like {font-size: 2.4em; } /* 24 pixels */
 h2, .h2-like {font-size: 2.0em; } /* 20 pixels */
 h3, .h3-like {font-size: 1.8em; } /* 18 pixels */
